Make verify,login,logout routes install jwt  for making jwt login token that provides to the user

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,4 @@
-MONGO_URL=abc
+MONGO_URI=mongodb+srv://ah2797764:Ahmed7475@cluster0.ossjcrc.mongodb.net/
 TOKEN_SECRET=Ahmed
+# ya secret use hota hay jwt may login kay liay ais ko hash jwt khud kar data hay 
 DOMAIN=http://localhost300
